# serializer version: 1
# name: test_getting_devices
  list([
    Zwave(
      assistants_enabled=1,
      binary_sensor_property=dict({
        'devolo.BinarySensor:hdm:ZWave:CBC56091/2#Alarm(0)': BinarySensorProperty(
          device_uid='hdm:ZWave:CBC56091/2',
          element_uid='devolo.BinarySensor:hdm:ZWave:CBC56091/2#Alarm(0)',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          sensor_type='alarm',
          state=False,
          sub_type='overload',
        ),
        'devolo.WarningBinaryFI:hdm:ZWave:CBC56091/2': BinarySensorProperty(
          device_uid='hdm:ZWave:CBC56091/2',
          element_uid='devolo.WarningBinaryFI:hdm:ZWave:CBC56091/2',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          sensor_type='warning',
          state=False,
          sub_type='overload',
        ),
      }),
      binary_switch_property=dict({
        'devolo.BinarySwitch:hdm:ZWave:CBC56091/2': BinarySwitchProperty(
          device_uid='hdm:ZWave:CBC56091/2',
          element_uid='devolo.BinarySwitch:hdm:ZWave:CBC56091/2',
          enabled=True,
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          state=False,
        ),
      }),
      brand='Everspring',
      consumption_property=dict({
        'devolo.Meter:hdm:ZWave:CBC56091/2': ConsumptionProperty(
          current=10,
          current_unit='W',
          device_uid='hdm:ZWave:CBC56091/2',
          element_uid='devolo.Meter:hdm:ZWave:CBC56091/2',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          total=28.38,
          total_since=FakeDatetime(2017, 5, 30, 8, 11, 4, 998000, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          total_unit='kWh',
        ),
      }),
      description=None,
      device_model_uid='devolo.model.Wall:Plug:Switch:and:Meter',
      device_type='Door Lock Keypad',
      element_uids=list([
        'devolo.Meter:hdm:ZWave:CBC56091/2',
        'devolo.BinarySwitch:hdm:ZWave:CBC56091/2',
        'devolo.BinarySensor:hdm:ZWave:CBC56091/2#Alarm(0)',
        'devolo.VoltageMultiLevelSensor:hdm:ZWave:CBC56091/2',
        'devolo.WarningBinaryFI:hdm:ZWave:CBC56091/2',
      ]),
      generic_device_class='Entry Control',
      href='https://mydevolo.com/v1/zwave/products/0x0060/0x0001/0x0002',
      identifier='SP814-US',
      is_own=True,
      is_securely_included=False,
      is_zwave_plus=True,
      manufacturer_id='0x0060',
      multi_level_sensor_property=dict({
        'devolo.VoltageMultiLevelSensor:hdm:ZWave:CBC56091/2': MultiLevelSensorProperty(
          device_uid='hdm:ZWave:CBC56091/2',
          element_uid='devolo.VoltageMultiLevelSensor:hdm:ZWave:CBC56091/2',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          sensor_type='voltage',
          sub_type='',
          unit='V',
          value=233.5,
        ),
      }),
      name='Everspring PIR Sensor SP814',
      pending_operations=False,
      product_id='0x0002',
      product_type_id='0x0001',
      secure_inclusion_code=0,
      setting_uids=list([
        'gds.hdm:ZWave:CBC56091/2',
        'cps.hdm:ZWave:CBC56091/2',
        'lis.hdm:ZWave:CBC56091/2',
        'ps.hdm:ZWave:CBC56091/2',
        'mas.hdm:ZWave:CBC56091/2',
      ]),
      settings_property=dict({
        'flash_mode': SettingsProperty(
          element_uid='mas.hdm:ZWave:CBC56091/2',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          value=3,
        ),
        'general_device_settings': SettingsProperty(
          element_uid='gds.hdm:ZWave:CBC56091/2',
          events_enabled=True,
          icon='light-bulb',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          name='Light Bulb',
          zone='Office',
          zone_id='hz_1',
        ),
        'led': SettingsProperty(
          element_uid='lis.hdm:ZWave:CBC56091/2',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          led_setting=True,
        ),
        'param_changed': SettingsProperty(
          element_uid='cps.hdm:ZWave:CBC56091/2',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          param_changed=False,
        ),
        'protection': SettingsProperty(
          element_uid='ps.hdm:ZWave:CBC56091/2',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          local_switching=True,
          remote_switching=True,
        ),
      }),
      specific_device_class='Secure Keypad Door Lock',
      status=2,
      uid='hdm:ZWave:CBC56091/2',
      zwave_version='6.51.07',
    ),
    Zwave(
      assistants_enabled=1,
      battery_level=100,
      battery_low=False,
      binary_sensor_property=dict({
        'devolo.BinarySensor:hdm:ZWave:CBC56091/3': BinarySensorProperty(
          device_uid='hdm:ZWave:CBC56091/3',
          element_uid='devolo.BinarySensor:hdm:ZWave:CBC56091/3',
          last_activity=FakeDatetime(2023, 4, 27, 7, 38, 44, 279000, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          sensor_type='door',
          state=False,
          sub_type='',
        ),
      }),
      brand='Everspring',
      description=None,
      device_model_uid='devolo.model.Door/Window:Sensor',
      device_type='Door Lock Keypad',
      element_uids=list([
        'devolo.BinarySensor:hdm:ZWave:CBC56091/3',
        'devolo.LastActivity:hdm:ZWave:CBC56091/3',
        'devolo.MultiLevelSensor:hdm:ZWave:CBC56091/3#MultilevelSensor(1)',
        'devolo.MultiLevelSensor:hdm:ZWave:CBC56091/3#MultilevelSensor(3)',
      ]),
      generic_device_class='Entry Control',
      href='https://mydevolo.com/v1/zwave/products/0x0060/0x0001/0x0002',
      identifier='SP814-US',
      is_own=True,
      is_securely_included=False,
      is_zwave_plus=True,
      manufacturer_id='0x0060',
      multi_level_sensor_property=dict({
        'devolo.MultiLevelSensor:hdm:ZWave:CBC56091/3#MultilevelSensor(1)': MultiLevelSensorProperty(
          device_uid='hdm:ZWave:CBC56091/3',
          element_uid='devolo.MultiLevelSensor:hdm:ZWave:CBC56091/3#MultilevelSensor(1)',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          sensor_type='temperature',
          sub_type='',
          unit='°C',
          value=20,
        ),
        'devolo.MultiLevelSensor:hdm:ZWave:CBC56091/3#MultilevelSensor(3)': MultiLevelSensorProperty(
          device_uid='hdm:ZWave:CBC56091/3',
          element_uid='devolo.MultiLevelSensor:hdm:ZWave:CBC56091/3#MultilevelSensor(3)',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          sensor_type='light',
          sub_type='',
          unit='%',
          value=61,
        ),
      }),
      name='Everspring PIR Sensor SP814',
      pending_operations=False,
      product_id='0x0002',
      product_type_id='0x0001',
      secure_inclusion_code=0,
      setting_uids=list([
        'gds.hdm:ZWave:CBC56091/3',
        'cps.hdm:ZWave:CBC56091/3',
        'trs.hdm:ZWave:CBC56091/3',
        'vfs.hdm:ZWave:CBC56091/3',
      ]),
      settings_property=dict({
        'general_device_settings': SettingsProperty(
          element_uid='gds.hdm:ZWave:CBC56091/3',
          events_enabled=True,
          icon='icon_16',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          name='Window',
          zone='Office',
          zone_id='hz_1',
        ),
        'led': SettingsProperty(
          element_uid='vfs.hdm:ZWave:CBC56091/3',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          led_setting=True,
        ),
        'param_changed': SettingsProperty(
          element_uid='cps.hdm:ZWave:CBC56091/3',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          param_changed=False,
        ),
        'temperature_report': SettingsProperty(
          element_uid='trs.hdm:ZWave:CBC56091/3',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          target_temp_report=True,
          temp_report=True,
        ),
      }),
      specific_device_class='Secure Keypad Door Lock',
      status=2,
      uid='hdm:ZWave:CBC56091/3',
      zwave_version='6.51.07',
    ),
    Zwave(
      assistants_enabled=1,
      battery_level=100,
      battery_low=False,
      binary_sensor_property=dict({
        'devolo.MildewSensor:hdm:ZWave:CBC56091/4': BinarySensorProperty(
          device_uid='hdm:ZWave:CBC56091/4',
          element_uid='devolo.MildewSensor:hdm:ZWave:CBC56091/4',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          sensor_type='',
          state=True,
          sub_type='',
        ),
      }),
      brand='Everspring',
      description=None,
      device_model_uid='devolo.model.Door/Window:Sensor',
      device_type='Door Lock Keypad',
      element_uids=list([
        'devolo.HumidityBarZone:hdm:ZWave:CBC56091/4',
        'devolo.HumidityBarValue:hdm:ZWave:CBC56091/4',
        'devolo.MildewSensor:hdm:ZWave:CBC56091/4',
        'devolo.MultiLevelSensor:hdm:ZWave:CBC56091/4#MultilevelSensor(1)',
        'devolo.MultiLevelSensor:hdm:ZWave:CBC56091/4#MultilevelSensor(3)',
      ]),
      generic_device_class='Entry Control',
      href='https://mydevolo.com/v1/zwave/products/0x0060/0x0001/0x0002',
      humidity_bar_property=dict({
        'devolo.HumidityBar:hdm:ZWave:CBC56091/4': HumidityBarProperty(
          device_uid='hdm:ZWave:CBC56091/4',
          element_uid='devolo.HumidityBar:hdm:ZWave:CBC56091/4',
          last_activity=FakeDatetime(2023, 4, 28, 10, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          sensor_type='',
          sub_type='',
          value=0,
          zone=0,
        ),
      }),
      identifier='SP814-US',
      is_own=True,
      is_securely_included=False,
      is_zwave_plus=True,
      manufacturer_id='0x0060',
      multi_level_sensor_property=dict({
        'devolo.MultiLevelSensor:hdm:ZWave:CBC56091/4#MultilevelSensor(1)': MultiLevelSensorProperty(
          device_uid='hdm:ZWave:CBC56091/4',
          element_uid='devolo.MultiLevelSensor:hdm:ZWave:CBC56091/4#MultilevelSensor(1)',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          sensor_type='temperature',
          sub_type='',
          unit='°C',
          value=20,
        ),
        'devolo.MultiLevelSensor:hdm:ZWave:CBC56091/4#MultilevelSensor(3)': MultiLevelSensorProperty(
          device_uid='hdm:ZWave:CBC56091/4',
          element_uid='devolo.MultiLevelSensor:hdm:ZWave:CBC56091/4#MultilevelSensor(3)',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          sensor_type='light',
          sub_type='',
          unit='%',
          value=61,
        ),
      }),
      name='Everspring PIR Sensor SP814',
      pending_operations=False,
      product_id='0x0002',
      product_type_id='0x0001',
      secure_inclusion_code=0,
      setting_uids=list([
        'gds.hdm:ZWave:CBC56091/3',
        'cps.hdm:ZWave:CBC56091/3',
        'trs.hdm:ZWave:CBC56091/3',
        'vfs.hdm:ZWave:CBC56091/3',
      ]),
      settings_property=dict({
        'general_device_settings': SettingsProperty(
          element_uid='gds.hdm:ZWave:CBC56091/4',
          events_enabled=True,
          icon='icon_16',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          name='Shower',
          zone='Bathroom',
          zone_id='hz_2',
        ),
        'led': SettingsProperty(
          element_uid='vfs.hdm:ZWave:CBC56091/4',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          led_setting=True,
        ),
        'param_changed': SettingsProperty(
          element_uid='cps.hdm:ZWave:CBC56091/4',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          param_changed=False,
        ),
        'temperature_report': SettingsProperty(
          element_uid='trs.hdm:ZWave:CBC56091/4',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          target_temp_report=True,
          temp_report=True,
        ),
      }),
      specific_device_class='Secure Keypad Door Lock',
      status=2,
      uid='hdm:ZWave:CBC56091/4',
      zwave_version='6.51.07',
    ),
    Zwave(
      assistants_enabled=1,
      battery_level=84,
      battery_low=False,
      brand='Everspring',
      description=None,
      device_model_uid='devolo.model.Room:Thermostat',
      device_type='Door Lock Keypad',
      element_uids=list([
        'devolo.MultiLevelSensor:hdm:ZWave:CBC56091/5',
        'devolo.MultiLevelSwitch:hdm:ZWave:CBC56091/5#ThermostatSetpoint(1)',
        'devolo.RemoteControl:hdm:ZWave:CBC56091/5',
      ]),
      generic_device_class='Entry Control',
      href='https://mydevolo.com/v1/zwave/products/0x0060/0x0001/0x0002',
      identifier='SP814-US',
      is_own=True,
      is_securely_included=False,
      is_zwave_plus=True,
      manufacturer_id='0x0060',
      multi_level_sensor_property=dict({
        'devolo.MultiLevelSensor:hdm:ZWave:CBC56091/5': MultiLevelSensorProperty(
          device_uid='hdm:ZWave:CBC56091/5',
          element_uid='devolo.MultiLevelSensor:hdm:ZWave:CBC56091/5',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          sensor_type='temperature',
          sub_type='',
          unit='°C',
          value=21.3,
        ),
      }),
      multi_level_switch_property=dict({
        'devolo.MultiLevelSwitch:hdm:ZWave:CBC56091/5#ThermostatSetpoint(1)': MultiLevelSwitchProperty(
          device_uid='hdm:ZWave:CBC56091/5',
          element_uid='devolo.MultiLevelSwitch:hdm:ZWave:CBC56091/5#ThermostatSetpoint(1)',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          max=28,
          min=4,
          switch_type='temperature',
          unit='°C',
          value=21,
        ),
      }),
      name='Everspring PIR Sensor SP814',
      pending_operations=False,
      product_id='0x0002',
      product_type_id='0x0001',
      remote_control_property=dict({
        'devolo.RemoteControl:hdm:ZWave:CBC56091/5': RemoteControlProperty(
          device_uid='hdm:ZWave:CBC56091/5',
          element_uid='devolo.RemoteControl:hdm:ZWave:CBC56091/5',
          key_count=1,
          key_pressed=0,
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
        ),
      }),
      secure_inclusion_code=0,
      setting_uids=list([
        'gds.hdm:ZWave:CBC56091/5',
        'cps.hdm:ZWave:CBC56091/5',
        'ss.hdm:ZWave:CBC56091/5:0',
      ]),
      settings_property=dict({
        'general_device_settings': SettingsProperty(
          element_uid='gds.hdm:ZWave:CBC56091/5',
          events_enabled=True,
          icon='icon_27',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          name='Thermostat',
          zone='Office',
          zone_id='hz_1',
        ),
        'param_changed': SettingsProperty(
          element_uid='cps.hdm:ZWave:CBC56091/5',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          param_changed=False,
        ),
      }),
      specific_device_class='Secure Keypad Door Lock',
      status=2,
      uid='hdm:ZWave:CBC56091/5',
      zwave_version='6.51.07',
    ),
    Zwave(
      assistants_enabled=1,
      battery_level=100,
      battery_low=False,
      binary_sensor_property=dict({
        'devolo.BinarySensor:hdm:ZWave:CBC56091/8': BinarySensorProperty(
          device_uid='hdm:ZWave:CBC56091/8',
          element_uid='devolo.BinarySensor:hdm:ZWave:CBC56091/8',
          last_activity=FakeDatetime(2023, 4, 27, 7, 38, 44, 279000, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          sensor_type='door',
          state=False,
          sub_type='',
        ),
      }),
      brand='Everspring',
      description=None,
      device_model_uid='devolo.model.Motion:Sensor',
      device_type='Door Lock Keypad',
      element_uids=list([
        'devolo.BinarySensor:hdm:ZWave:CBC56091/8',
        'devolo.LastActivity:hdm:ZWave:CBC56091/8',
        'devolo.MultiLevelSensor:hdm:ZWave:CBC56091/8#MultilevelSensor(1)',
        'devolo.MultiLevelSensor:hdm:ZWave:CBC56091/8#MultilevelSensor(3)',
      ]),
      generic_device_class='Entry Control',
      href='https://mydevolo.com/v1/zwave/products/0x0060/0x0001/0x0002',
      identifier='SP814-US',
      is_own=True,
      is_securely_included=False,
      is_zwave_plus=True,
      manufacturer_id='0x0060',
      multi_level_sensor_property=dict({
        'devolo.MultiLevelSensor:hdm:ZWave:CBC56091/8#MultilevelSensor(1)': MultiLevelSensorProperty(
          device_uid='hdm:ZWave:CBC56091/8',
          element_uid='devolo.MultiLevelSensor:hdm:ZWave:CBC56091/8#MultilevelSensor(1)',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          sensor_type='temperature',
          sub_type='',
          unit='°C',
          value=20,
        ),
        'devolo.MultiLevelSensor:hdm:ZWave:CBC56091/8#MultilevelSensor(3)': MultiLevelSensorProperty(
          device_uid='hdm:ZWave:CBC56091/8',
          element_uid='devolo.MultiLevelSensor:hdm:ZWave:CBC56091/8#MultilevelSensor(3)',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          sensor_type='light',
          sub_type='',
          unit='%',
          value=61,
        ),
      }),
      name='Everspring PIR Sensor SP814',
      pending_operations=False,
      product_id='0x0002',
      product_type_id='0x0001',
      secure_inclusion_code=0,
      setting_uids=list([
        'gds.hdm:ZWave:CBC56091/8',
        'cps.hdm:ZWave:CBC56091/8',
        'mss.hdm:ZWave:CBC56091/8',
        'trs.hdm:ZWave:CBC56091/8',
        'vfs.hdm:ZWave:CBC56091/8',
      ]),
      settings_property=dict({
        'general_device_settings': SettingsProperty(
          element_uid='gds.hdm:ZWave:CBC56091/8',
          events_enabled=True,
          icon='icon_16',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          name='Motion',
          zone='Office',
          zone_id='hz_1',
        ),
        'led': SettingsProperty(
          element_uid='vfs.hdm:ZWave:CBC56091/8',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          led_setting=True,
        ),
        'motion_sensitivity': SettingsProperty(
          element_uid='mss.hdm:ZWave:CBC56091/8',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          motion_sensitivity=7,
        ),
        'param_changed': SettingsProperty(
          element_uid='cps.hdm:ZWave:CBC56091/8',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          param_changed=False,
        ),
        'temperature_report': SettingsProperty(
          element_uid='trs.hdm:ZWave:CBC56091/8',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          target_temp_report=True,
          temp_report=True,
        ),
      }),
      specific_device_class='Secure Keypad Door Lock',
      status=2,
      uid='hdm:ZWave:CBC56091/8',
      zwave_version='6.51.07',
    ),
  ])
# ---
# name: test_getting_devices.1
  list([
    Zwave(
      assistants_enabled=1,
      battery_level=84,
      battery_low=False,
      brand='Everspring',
      description=None,
      device_model_uid='devolo.model.Room:Thermostat',
      device_type='Door Lock Keypad',
      element_uids=list([
        'devolo.MultiLevelSensor:hdm:ZWave:CBC56091/5',
        'devolo.MultiLevelSwitch:hdm:ZWave:CBC56091/5#ThermostatSetpoint(1)',
        'devolo.RemoteControl:hdm:ZWave:CBC56091/5',
      ]),
      generic_device_class='Entry Control',
      href='https://mydevolo.com/v1/zwave/products/0x0060/0x0001/0x0002',
      identifier='SP814-US',
      is_own=True,
      is_securely_included=False,
      is_zwave_plus=True,
      manufacturer_id='0x0060',
      multi_level_sensor_property=dict({
        'devolo.MultiLevelSensor:hdm:ZWave:CBC56091/5': MultiLevelSensorProperty(
          device_uid='hdm:ZWave:CBC56091/5',
          element_uid='devolo.MultiLevelSensor:hdm:ZWave:CBC56091/5',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          sensor_type='temperature',
          sub_type='',
          unit='°C',
          value=21.3,
        ),
      }),
      multi_level_switch_property=dict({
        'devolo.MultiLevelSwitch:hdm:ZWave:CBC56091/5#ThermostatSetpoint(1)': MultiLevelSwitchProperty(
          device_uid='hdm:ZWave:CBC56091/5',
          element_uid='devolo.MultiLevelSwitch:hdm:ZWave:CBC56091/5#ThermostatSetpoint(1)',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          max=28,
          min=4,
          switch_type='temperature',
          unit='°C',
          value=21,
        ),
      }),
      name='Everspring PIR Sensor SP814',
      pending_operations=False,
      product_id='0x0002',
      product_type_id='0x0001',
      remote_control_property=dict({
        'devolo.RemoteControl:hdm:ZWave:CBC56091/5': RemoteControlProperty(
          device_uid='hdm:ZWave:CBC56091/5',
          element_uid='devolo.RemoteControl:hdm:ZWave:CBC56091/5',
          key_count=1,
          key_pressed=0,
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
        ),
      }),
      secure_inclusion_code=0,
      setting_uids=list([
        'gds.hdm:ZWave:CBC56091/5',
        'cps.hdm:ZWave:CBC56091/5',
        'ss.hdm:ZWave:CBC56091/5:0',
      ]),
      settings_property=dict({
        'general_device_settings': SettingsProperty(
          element_uid='gds.hdm:ZWave:CBC56091/5',
          events_enabled=True,
          icon='icon_27',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          name='Thermostat',
          zone='Office',
          zone_id='hz_1',
        ),
        'param_changed': SettingsProperty(
          element_uid='cps.hdm:ZWave:CBC56091/5',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          param_changed=False,
        ),
      }),
      specific_device_class='Secure Keypad Door Lock',
      status=2,
      uid='hdm:ZWave:CBC56091/5',
      zwave_version='6.51.07',
    ),
    Zwave(
      assistants_enabled=1,
      brand='Everspring',
      description=None,
      device_model_uid='devolo.model.Siren',
      device_type='Door Lock Keypad',
      element_uids=list([
        'devolo.SirenMultiLevelSwitch:hdm:ZWave:CBC56091/6',
        'devolo.SirenBinarySensor:hdm:ZWave:CBC56091/6',
        'devolo.SirenMultiLevelSensor:hdm:ZWave:CBC56091/6',
        'devolo.LastActivity:hdm:ZWave:CBC56091/6',
      ]),
      generic_device_class='Entry Control',
      href='https://mydevolo.com/v1/zwave/products/0x0060/0x0001/0x0002',
      identifier='SP814-US',
      is_own=True,
      is_securely_included=False,
      is_zwave_plus=True,
      manufacturer_id='0x0060',
      multi_level_switch_property=dict({
        'devolo.SirenMultiLevelSwitch:hdm:ZWave:CBC56091/6': MultiLevelSwitchProperty(
          device_uid='hdm:ZWave:CBC56091/6',
          element_uid='devolo.SirenMultiLevelSwitch:hdm:ZWave:CBC56091/6',
          last_activity=FakeDatetime(2023, 4, 28, 6, 43, 56, 957000, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          max=9,
          min=0,
          switch_type='tone',
          unit=None,
          value=0,
        ),
      }),
      name='Everspring PIR Sensor SP814',
      pending_operations=False,
      product_id='0x0002',
      product_type_id='0x0001',
      secure_inclusion_code=0,
      setting_uids=list([
        'gds.hdm:ZWave:CBC56091/6',
        'cps.hdm:ZWave:CBC56091/6',
        'bas.hdm:ZWave:CBC56091/6',
        'mss.hdm:ZWave:CBC56091/6',
      ]),
      settings_property=dict({
        'general_device_settings': SettingsProperty(
          element_uid='gds.hdm:ZWave:CBC56091/6',
          events_enabled=True,
          icon='icon_34',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          name='Siren',
          zone='Office',
          zone_id='hz_1',
        ),
        'muted': SettingsProperty(
          element_uid='bas.hdm:ZWave:CBC56091/6',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          value=True,
        ),
        'param_changed': SettingsProperty(
          element_uid='cps.hdm:ZWave:CBC56091/6',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          param_changed=False,
        ),
        'tone': SettingsProperty(
          element_uid='mss.hdm:ZWave:CBC56091/6',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          tone=7,
        ),
      }),
      specific_device_class='Secure Keypad Door Lock',
      status=2,
      uid='hdm:ZWave:CBC56091/6',
      zwave_version='6.51.07',
    ),
    Zwave(
      assistants_enabled=1,
      brand='Everspring',
      calibration_status=1,
      description=None,
      device_model_uid='devolo.model.Shutter',
      device_type='Door Lock Keypad',
      element_uids=list([
        'devolo.Blinds:hdm:ZWave:CBC56091/9',
      ]),
      generic_device_class='Entry Control',
      href='https://mydevolo.com/v1/zwave/products/0x0060/0x0001/0x0002',
      i2=True,
      identifier='SP814-US',
      inverted=False,
      is_own=True,
      is_securely_included=False,
      is_zwave_plus=True,
      manufacturer_id='0x0060',
      multi_level_switch_property=dict({
        'devolo.Blinds:hdm:ZWave:CBC56091/9': MultiLevelSwitchProperty(
          device_uid='hdm:ZWave:CBC56091/9',
          element_uid='devolo.Blinds:hdm:ZWave:CBC56091/9',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          max=100,
          min=0,
          switch_type='',
          unit='%',
          value=21,
        ),
      }),
      name='Everspring PIR Sensor SP814',
      pending_operations=False,
      product_id='0x0002',
      product_type_id='0x0001',
      secure_inclusion_code=0,
      setting_uids=list([
        'acs.hdm:ZWave:CBC56091/9',
        'bas.hdm:ZWave:CBC56091/9#i2',
        'bss.hdm:ZWave:CBC56091/9',
        'gds.hdm:ZWave:CBC56091/9',
        'mss.hdm:ZWave:CBC56091/9',
      ]),
      settings_property=dict({
        'automatic_calibration': SettingsProperty(
          calibration_status=True,
          element_uid='acs.hdm:ZWave:CBC56091/9',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
        ),
        'general_device_settings': SettingsProperty(
          element_uid='gds.hdm:ZWave:CBC56091/9',
          events_enabled=True,
          icon='icon_16',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          name='Shutter',
          zone='Office',
          zone_id='hz_1',
        ),
        'i2': SettingsProperty(
          element_uid='bas.hdm:ZWave:CBC56091/9#i2',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          value=True,
        ),
        'movement_direction': SettingsProperty(
          element_uid='bss.hdm:ZWave:CBC56091/9',
          inverted=0,
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
        ),
        'shutter_duration': SettingsProperty(
          element_uid='mss.hdm:ZWave:CBC56091/9',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          shutter_duration=20,
        ),
      }),
      specific_device_class='Secure Keypad Door Lock',
      status=2,
      uid='hdm:ZWave:CBC56091/9',
      zwave_version='6.51.07',
    ),
  ])
# ---
# name: test_getting_devices.2
  list([
    Zwave(
      assistants_enabled=1,
      battery_level=84,
      battery_low=False,
      brand='Everspring',
      description=None,
      device_model_uid='devolo.model.Room:Thermostat',
      device_type='Door Lock Keypad',
      element_uids=list([
        'devolo.MultiLevelSensor:hdm:ZWave:CBC56091/5',
        'devolo.MultiLevelSwitch:hdm:ZWave:CBC56091/5#ThermostatSetpoint(1)',
        'devolo.RemoteControl:hdm:ZWave:CBC56091/5',
      ]),
      generic_device_class='Entry Control',
      href='https://mydevolo.com/v1/zwave/products/0x0060/0x0001/0x0002',
      identifier='SP814-US',
      is_own=True,
      is_securely_included=False,
      is_zwave_plus=True,
      manufacturer_id='0x0060',
      multi_level_sensor_property=dict({
        'devolo.MultiLevelSensor:hdm:ZWave:CBC56091/5': MultiLevelSensorProperty(
          device_uid='hdm:ZWave:CBC56091/5',
          element_uid='devolo.MultiLevelSensor:hdm:ZWave:CBC56091/5',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          sensor_type='temperature',
          sub_type='',
          unit='°C',
          value=21.3,
        ),
      }),
      multi_level_switch_property=dict({
        'devolo.MultiLevelSwitch:hdm:ZWave:CBC56091/5#ThermostatSetpoint(1)': MultiLevelSwitchProperty(
          device_uid='hdm:ZWave:CBC56091/5',
          element_uid='devolo.MultiLevelSwitch:hdm:ZWave:CBC56091/5#ThermostatSetpoint(1)',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          max=28,
          min=4,
          switch_type='temperature',
          unit='°C',
          value=21,
        ),
      }),
      name='Everspring PIR Sensor SP814',
      pending_operations=False,
      product_id='0x0002',
      product_type_id='0x0001',
      remote_control_property=dict({
        'devolo.RemoteControl:hdm:ZWave:CBC56091/5': RemoteControlProperty(
          device_uid='hdm:ZWave:CBC56091/5',
          element_uid='devolo.RemoteControl:hdm:ZWave:CBC56091/5',
          key_count=1,
          key_pressed=0,
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
        ),
      }),
      secure_inclusion_code=0,
      setting_uids=list([
        'gds.hdm:ZWave:CBC56091/5',
        'cps.hdm:ZWave:CBC56091/5',
        'ss.hdm:ZWave:CBC56091/5:0',
      ]),
      settings_property=dict({
        'general_device_settings': SettingsProperty(
          element_uid='gds.hdm:ZWave:CBC56091/5',
          events_enabled=True,
          icon='icon_27',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          name='Thermostat',
          zone='Office',
          zone_id='hz_1',
        ),
        'param_changed': SettingsProperty(
          element_uid='cps.hdm:ZWave:CBC56091/5',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          param_changed=False,
        ),
      }),
      specific_device_class='Secure Keypad Door Lock',
      status=2,
      uid='hdm:ZWave:CBC56091/5',
      zwave_version='6.51.07',
    ),
    Zwave(
      assistants_enabled=1,
      battery_level=60,
      battery_low=False,
      brand='Everspring',
      description=None,
      device_model_uid='devolo.model.Wall:Control',
      device_type='Door Lock Keypad',
      element_uids=list([
        'devolo.RemoteControl:hdm:ZWave:CBC56091/7',
      ]),
      generic_device_class='Entry Control',
      href='https://mydevolo.com/v1/zwave/products/0x0060/0x0001/0x0002',
      identifier='SP814-US',
      is_own=True,
      is_securely_included=False,
      is_zwave_plus=True,
      manufacturer_id='0x0060',
      name='Everspring PIR Sensor SP814',
      pending_operations=False,
      product_id='0x0002',
      product_type_id='0x0001',
      remote_control_property=dict({
        'devolo.RemoteControl:hdm:ZWave:CBC56091/7': RemoteControlProperty(
          device_uid='hdm:ZWave:CBC56091/7',
          element_uid='devolo.RemoteControl:hdm:ZWave:CBC56091/7',
          key_count=4,
          key_pressed=0,
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
        ),
      }),
      secure_inclusion_code=0,
      setting_uids=list([
        'gds.hdm:ZWave:CBC56091/7',
        'cps.hdm:ZWave:CBC56091/7',
        'ss.hdm:ZWave:CBC56091/7:0',
        'ss.hdm:ZWave:CBC56091/7:1',
        'ss.hdm:ZWave:CBC56091/7:2',
        'ss.hdm:ZWave:CBC56091/7:3',
        'sts.hdm:ZWave:CBC56091/7',
      ]),
      settings_property=dict({
        'general_device_settings': SettingsProperty(
          element_uid='gds.hdm:ZWave:CBC56091/7',
          events_enabled=True,
          icon='icon_47',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          name='Wall Switch',
          zone='Office',
          zone_id='hz_1',
        ),
        'param_changed': SettingsProperty(
          element_uid='cps.hdm:ZWave:CBC56091/7',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          param_changed=False,
        ),
        'switch_type': SettingsProperty(
          element_uid='sts.hdm:ZWave:CBC56091/7',
          last_activity=FakeDatetime(1970, 1, 1, 1, 0, tzinfo=tzfile('/usr/share/zoneinfo/Europe/Berlin')),
          value=4,
        ),
      }),
      specific_device_class='Secure Keypad Door Lock',
      status=1,
      uid='hdm:ZWave:CBC56091/7',
      zwave_version='6.51.07',
    ),
  ])
# ---
